[package]
name = "realtime-rc"
version = "0.0.0"
edition = "2021"
authors = [
  "Mat Sz <contact@mat.dev>"
]

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
actix-broker = "0.4.3"
colored = "2.0.0"
webrtc = "0.7.3"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
log = "0.4.16"
lazy_static = "1.4"
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3"
adafruit_motorkit = "0.1.1"
local-ip-address = "0.5.3"
gumdrop = "0.8"

[dependencies.hyper]
version = "0.14"
features = ["server", "http1", "runtime"]

[dependencies.tokio]
version = "1.18.4"
features = ["rt"]

[dependencies.openh264]
version = "0.4.1"
default-features = false
features = ["encoder"]

[dependencies.env_logger]
version = "0.10.0"
default-features = false
features = ["auto-color", "humantime"]

[dependencies.uuid]
version = "1.3.3"
features = ["v4", "fast-rng"]

[dependencies.nokhwa]
version = "0.10.0"
features = ["input-native"]

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "s"